2014-04-01  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.[ch]: reverting back to the direct dlr_add() including the use_dst
      flag in the function prototype, there is no way to handle an int type
      via va_args without knowin the number of arguments passed, only void*
      can be handled this way.
    * gw/smsc/smsc_*.c, gw/smsc/http/*.c: addopt the dlr_add() call to the
      function prototype. NLC.
      
2014-03-11  Stipe Tolj  <stolj at kannel.org>
    * soap/Makefile.in: make sure the gsoap enabled build is installing 
      correctly, so we have a working 'gw-config --libs' reference.
    * Makefile.in: install all lib*.a library in the install target, which
      ensures that the gsoap relevant libs are also installed to the target.
      
2014-02-11 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr.c,gw/smsc/smsc_smpp.c: Added meta-data support for SMPP response
      PDUs.

2014-02-10 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smpp_pdu.[ch], gw/smsc/smsc_smpp.c, test/drive_smpp.c: don't
      print TLVs if they are not configured for this SMSC

2014-02-10 Alexander Malysh <amalysh at kannel.org>
    * gw/meta_data.[ch]: added meta_data_merge function.

2014-01-31 Alexander Malysh <amalysh at kannel.org>
    * socket.[ch]: renamed interface_name to source_addr to avoid confusion.

2014-01-08 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: fixed compilation error.

2014-01-06  Stipe Tolj  <stolj at kannel.org>
    * gw/smsbox.c: fix HTTP retry starvation in a sequential retry with
      in loop sleep time. This causes MOs that can't be delivered to the 
      HTTP application layer to be held in the retry queue for too long.
      Now we use the timer abstracted data type to trigger the retry call
      asynchronously for every MO message event.
      
2014-01-06  Stipe Tolj  <stolj at kannel.org>
    * gwlib/gw-timer.[ch]: abstracting the wap/timers.[ch] module, making